Adicionei um novo paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, sed optio voluptate dicta voluptatem, totam debitis accusantium suscipit vitae commodi ex asperiores quos rerum omnis corrupti, in cum doloribus reiciendis!
     </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, nesciunt ab! Nobis illum deserunt voluptates voluptatibus est, in excepturi at tempore culpa eos. Sit voluptatibus eligendi sapiente. Praesentium, ad corrupti!</p>
 </body>
 </html>
